# import-script-template

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_01_DATA_MODELING.md  CLAUDE_02_IMPORT_SCRIPTS.md  CLAUDE_DATA_MODELING.md  README.md  justfile  pyproject.toml
.github/workflows/: tests-on-push.yml
src/: main.py
