[project]
name = "import-script-template"
version = "0.1.0"
description = "This is a template for your import scripts"
authors = [{name = "DaSCH", email = "info@dasch.swiss"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest",
    "mypy",
    "ruff",
    "pre-commit",
]


[tool.ruff]
line-length = 120


[tool.ruff.lint]
select = [
    "RUF",      # ruff-specific rules
    "A",        # flake8-builtins
    "B",        # flake8-bugbear plugin finding likely bugs and design problems 
    "ARG",      # flake8-unused-arguments
    "PT",       # flake8-pytest-style plugin
    "TID",      # flake8-tidy-imports plugin
    "ICN",      # flake8-import-conventions plugin, which checks for import conventions
    "SIM",      # flake8-simplify plugin which checks for simplifiable statements
    "PTH",      # flake8-use-pathlib plugin which checks for old style usage of os that can be replaced with pathlib
    "PGH",      # pygrep-hooks: A collection of fast, cheap, regex based pre-commit hooks
    "N",        # pep8-naming
    "PD",       # pandas-vet: checks for common pandas mistakes
]
ignore = [
    "ISC001",   # flake8-implicit-str-concat: single-line-implicit-string-concatenation  # incompatible with the formatter
]
